@@ -1,3 +1,9 @@
+Thu Sep 25 15:26:43 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* config.h (HAVE_NDIR_H): Define.
+	* vms.h: Add comment about the include of ndir.h.
+	* ndir.h: Protect against multiple inclusion.
+
 Tue, 9 Sep 1997  Jim Kingdon
 
 	* config.h: Define HAVE_VPRINTF.
